# LearningC

./: CMakeLists.txt  LICENSE  README.md  gitignore.md
BookExamples/Chapter01/: Excersise1-2  Excersise1-2.c  celsFahr  celsFahr.c  helloWorld.c
fs19_4bb2_p2/: aufgabe10_yesterday.c  aufgabe2_stackmutex.c  aufgabe3_childrenpipe.c  aufgabe8_vendors.c  aufgabe8_vendors_alternative.c  aufgabe9_signaltimer.c  makefile  readme.md
uebungen/: parking.c  pipe  pipe.c  simple_pipe.c  time  time.c  timer  timer.c
